fix coach page sink problem on IE 6

--- a/public/stylesheets/qiaobutang.css
+++ b/public/stylesheets/qiaobutang.css
@@ -203,7 +203,7 @@ body {
 }
 
 .coach_block {
-	margin: 0px 10px 0px 5px;
+	margin: 0px 10px 0px 3px;
 	margin-bottom: 15px;
 }
 
